add exception validation test and refactors